fix tooltip on mobile

--- a/assets/scss/root.scss
+++ b/assets/scss/root.scss
@@ -70,23 +70,13 @@ body {
     color: var(--blue300);
     font-family: 'NotoSans-Regular';
 
-    &::-webkit-scrollbar {
-        width: 6px;
-    }
-
-    &::-webkit-scrollbar-button {
-        background-repeat: no-repeat;
-        width: 6px;
-        height: 0px;
+    &::-webkit-scrollbar-track {
+        background-color: #F1F4F7;
     }
 
     &::-webkit-scrollbar-thumb {
         border-radius: 5px;
-        background: var(--blue100);
-    }
-
-    &::-webkit-scrollbar-track {
-        background-color: transparent;
+        background: #D4DDF8;
     }
 }
 
