--- a/assets/scss/utils/global.scss
+++ b/assets/scss/utils/global.scss
@@ -2,7 +2,6 @@
   max-width: 1218px;
   margin: 0 auto;
   width: 100%;
-  overflow: hidden;
 
   @media (max-width: 1218px) {
     padding: 0 1rem;
@@ -15,6 +14,12 @@ section {
 
 .hidden {
   display: none;
+}
+
+.overflow {
+  &-hidden {
+    overflow: hidden;
+  }
 }
 
 .circle {
@@ -389,12 +394,12 @@ section {
     }
   }
 
-  @media (max-width: 710px){
-    &-content{
+  @media (max-width: 710px) {
+    &-content {
       top: 82px;
       left: 165%;
 
-      &::before{
+      &::before {
         right: 60%;
       }
     }
@@ -417,7 +422,7 @@ section {
 .flex {
   display: flex;
 
-  &-col{
+  &-col {
     flex-direction: column;
   }
 }
